# AddLib

./: settings.gradle
TopotekModule/: CMakeLists.txt  build.gradle
TopotekModule/src/androidTest/java/com/topotek/topotekmodule/: ExampleInstrumentedTest.java
TopotekModule/src/main/: AndroidManifest.xml
TopotekModule/src/main/java/com/topotek/topotekmodule/: ProjectModule.java  UsbCameraRecordHelper.java
TopotekModule/src/main/jni/: Android.mk  UsbCamera.c  jni_UsbCamera.h  v4l2Utils.h
TopotekModule/src/main/jni/debug/: debugTools.h
TopotekModule/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/libs/arm64-v8a/: hotplugtest  xusb
app/libs/armeabi/: fxload  hotplugtest  listdevs  stress  xusb
app/libs/armeabi-v7a/: fxload  hotplugtest  listdevs  stress
app/libs/mips/: dpfp  dpfp_threaded  hotplugtest  listdevs  sam3u_benchmark
app/libs/mips64/: dpfp_threaded  fxload  listdevs
app/libs/x86/: dpfp  fxload  hotplugtest  stress
app/libs/x86_64/: fxload  listdevs  sam3u_benchmark  stress  xusb
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.h  hello_ncs.cpp  mvnc.h  mvnc_api.c  mvnc_deprecated.h  native-lib.cpp  run.cpp  run.h  usb_boot.c  usb_link_vsc.c
app/src/main/cpp/jniCall/: callback.h  com_topotek_movidius_jni_JNI.h  jback.h  main.cpp  movidius.h
app/src/main/jniLibs/arm64-v8a/: dpfp  dpfp_threaded  fxload  listdevs  sam3u_benchmark  stress
app/src/main/jniLibs/armeabi/: dpfp  dpfp_threaded  sam3u_benchmark
app/src/main/jniLibs/armeabi-v7a/: dpfp  dpfp_threaded  sam3u_benchmark  xusb
app/src/main/jniLibs/mips/: fxload  stress  xusb
app/src/main/jniLibs/mips64/: dpfp  hotplugtest  sam3u_benchmark  stress  xusb
app/src/main/jniLibs/x86/: dpfp_threaded  listdevs  sam3u_benchmark  xusb
app/src/main/jniLibs/x86_64/: dpfp  dpfp_threaded  hotplugtest
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
openCVLibrary340dev/: build.gradle
(+98 files in other folders)
